--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
@@ -18,5 +17,7 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAS_aEppj2N3qwPyEa4Q_UWD5gHFu7kTAs
+		&libraries=places"></script>
 	</body>
 </html>
